updated project for intellij