@@ -1,15 +1,15 @@
 package com.bladerunner.exception;
 
-import java.util.HashMap;
-import java.util.Map;
-
+import com.bladerunner.payloads.ApiResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import com.bladerunner.payloads.ApiResponse;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
@@ -30,7 +30,7 @@ public class GlobalExceptionHandler {
 		ex.getFieldErrors().stream().map(error -> {
 			response.put(error.getField(), error.getDefaultMessage());
 			return error;
-		}).toList();
+		}).collect(Collectors.toList());
 
 		return new ResponseEntity<Map<String, String>>(response, HttpStatus.BAD_REQUEST);
 	}
